--- a/process_food_kg.ipynb
+++ b/process_food_kg.ipynb
@@ -9,8 +9,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-17T03:52:09.977713Z",
-     "start_time": "2025-11-17T03:52:09.975701Z"
+     "end_time": "2025-11-17T04:34:43.226390Z",
+     "start_time": "2025-11-17T04:34:43.224095Z"
     }
    },
    "cell_type": "code",
@@ -31,8 +31,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-11-17T03:52:10.843562Z",
-     "start_time": "2025-11-17T03:52:10.010672Z"
+     "end_time": "2025-11-17T04:34:43.914802Z",
+     "start_time": "2025-11-17T04:34:43.229064Z"
     }
    },
    "source": [
@@ -62,8 +62,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-17T03:52:10.888455Z",
-     "start_time": "2025-11-17T03:52:10.886406Z"
+     "end_time": "2025-11-17T04:34:43.920212Z",
+     "start_time": "2025-11-17T04:34:43.918544Z"
     }
    },
    "cell_type": "code",
@@ -90,8 +90,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-17T03:52:10.920566Z",
-     "start_time": "2025-11-17T03:52:10.918835Z"
+     "end_time": "2025-11-17T04:34:43.926092Z",
+     "start_time": "2025-11-17T04:34:43.922485Z"
     }
    },
    "cell_type": "code",
@@ -111,8 +111,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-17T03:52:14.376357Z",
-     "start_time": "2025-11-17T03:52:10.957110Z"
+     "end_time": "2025-11-17T04:34:48.132653Z",
+     "start_time": "2025-11-17T04:34:43.928331Z"
     }
    },
    "cell_type": "code",
@@ -124,8 +124,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-17T03:52:14.393277Z",
-     "start_time": "2025-11-17T03:52:14.387946Z"
+     "end_time": "2025-11-17T04:34:48.186206Z",
+     "start_time": "2025-11-17T04:34:48.180711Z"
     }
    },
    "cell_type": "code",
@@ -135,12 +135,19 @@
     {
      "data": {
       "text/plain": [
-       "   id                                        ingredients\n",
-       "0   0  ['1 c. firmly packed brown sugar', '1/2 c. eva...\n",
-       "1   1  ['1 small jar chipped beef, cut up', '4 boned ...\n",
-       "2   2  ['2 (16 oz.) pkg. frozen corn', '1 (8 oz.) pkg...\n",
-       "3   3  ['1 large whole chicken', '2 (10 1/2 oz.) cans...\n",
-       "4   4  ['1 c. peanut butter', '3/4 c. graham cracker ..."
+       "   id                  title  \\\n",
+       "0   0    No-Bake Nut Cookies   \n",
+       "1   1  Jewell Ball'S Chicken   \n",
+       "2   2            Creamy Corn   \n",
+       "3   3          Chicken Funny   \n",
+       "4   4     Reeses Cups(Candy)   \n",
+       "\n",
+       "                                         ingredients  \n",
+       "0  ['1 c. firmly packed brown sugar', '1/2 c. eva...  \n",
+       "1  ['1 small jar chipped beef, cut up', '4 boned ...  \n",
+       "2  ['2 (16 oz.) pkg. frozen corn', '1 (8 oz.) pkg...  \n",
+       "3  ['1 large whole chicken', '2 (10 1/2 oz.) cans...  \n",
+       "4  ['1 c. peanut butter', '3/4 c. graham cracker ...  "
       ],
       "text/html": [
        "<div>\n",
@@ -162,6 +169,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>id</th>\n",
+       "      <th>title</th>\n",
        "      <th>ingredients</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -169,26 +177,31 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0</td>\n",
+       "      <td>No-Bake Nut Cookies</td>\n",
        "      <td>['1 c. firmly packed brown sugar', '1/2 c. eva...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1</td>\n",
+       "      <td>Jewell Ball'S Chicken</td>\n",
        "      <td>['1 small jar chipped beef, cut up', '4 boned ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2</td>\n",
+       "      <td>Creamy Corn</td>\n",
        "      <td>['2 (16 oz.) pkg. frozen corn', '1 (8 oz.) pkg...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>3</td>\n",
+       "      <td>Chicken Funny</td>\n",
        "      <td>['1 large whole chicken', '2 (10 1/2 oz.) cans...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>4</td>\n",
+       "      <td>Reeses Cups(Candy)</td>\n",
        "      <td>['1 c. peanut butter', '3/4 c. graham cracker ...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -206,8 +219,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-17T03:52:35.117282Z",
-     "start_time": "2025-11-17T03:52:14.529071Z"
+     "end_time": "2025-11-17T04:35:08.578253Z",
+     "start_time": "2025-11-17T04:34:48.212762Z"
     }
    },
    "cell_type": "code",
@@ -237,8 +250,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-17T03:52:35.163489Z",
-     "start_time": "2025-11-17T03:52:35.152726Z"
+     "end_time": "2025-11-17T04:35:08.618141Z",
+     "start_time": "2025-11-17T04:35:08.608275Z"
     }
    },
    "cell_type": "code",
@@ -250,8 +263,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-17T03:52:35.176736Z",
-     "start_time": "2025-11-17T03:52:35.173945Z"
+     "end_time": "2025-11-17T04:35:08.631201Z",
+     "start_time": "2025-11-17T04:35:08.629026Z"
     }
    },
    "cell_type": "code",
@@ -274,8 +287,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-17T03:52:35.198170Z",
-     "start_time": "2025-11-17T03:52:35.194321Z"
+     "end_time": "2025-11-17T04:35:08.655227Z",
+     "start_time": "2025-11-17T04:35:08.651272Z"
     }
    },
    "cell_type": "code",
@@ -298,8 +311,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-17T03:52:35.206790Z",
-     "start_time": "2025-11-17T03:52:35.202883Z"
+     "end_time": "2025-11-17T04:35:08.667542Z",
+     "start_time": "2025-11-17T04:35:08.664090Z"
     }
    },
    "cell_type": "code",
@@ -309,12 +322,19 @@
     {
      "data": {
       "text/plain": [
-       "    id                                        ingredients  \\\n",
-       "95  95  ['3 (1 lb.) cans pork and beans', '1/2 c. bell...   \n",
-       "96  96  ['2 c. diced cooked chicken', '2 Tbsp. shorten...   \n",
-       "97  97  ['8 to 10 juicy oranges, peeled and diced', '1...   \n",
-       "98  98  ['1 c. creamy peanut butter', '1 c. sugar', '1...   \n",
-       "99  99  ['1 box yellow cake mix', '2 eggs', '1/3 c. so...   \n",
+       "    id                        title  \\\n",
+       "95  95                  Baked Beans   \n",
+       "96  96         Sweet-N-Sour Chicken   \n",
+       "97  97                     Ambrosia   \n",
+       "98  98  Crazy Peanut Butter Cookies   \n",
+       "99  99                 Brickle Bars   \n",
+       "\n",
+       "                                          ingredients  \\\n",
+       "95  ['3 (1 lb.) cans pork and beans', '1/2 c. bell...   \n",
+       "96  ['2 c. diced cooked chicken', '2 Tbsp. shorten...   \n",
+       "97  ['8 to 10 juicy oranges, peeled and diced', '1...   \n",
+       "98  ['1 c. creamy peanut butter', '1 c. sugar', '1...   \n",
+       "99  ['1 box yellow cake mix', '2 eggs', '1/3 c. so...   \n",
        "\n",
        "                               ingredients_normalized  \n",
        "95  \"['pork and beans', 'bell pepper', 'onion', 'c...  \n",
@@ -343,6 +363,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>id</th>\n",
+       "      <th>title</th>\n",
        "      <th>ingredients</th>\n",
        "      <th>ingredients_normalized</th>\n",
        "    </tr>\n",
@@ -351,30 +372,35 @@
        "    <tr>\n",
        "      <th>95</th>\n",
        "      <td>95</td>\n",
+       "      <td>Baked Beans</td>\n",
        "      <td>['3 (1 lb.) cans pork and beans', '1/2 c. bell...</td>\n",
        "      <td>\"['pork and beans', 'bell pepper', 'onion', 'c...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>96</th>\n",
        "      <td>96</td>\n",
+       "      <td>Sweet-N-Sour Chicken</td>\n",
        "      <td>['2 c. diced cooked chicken', '2 Tbsp. shorten...</td>\n",
        "      <td>\"['chicken', 'shortening', 'onion', 'carrot', ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>97</th>\n",
        "      <td>97</td>\n",
+       "      <td>Ambrosia</td>\n",
        "      <td>['8 to 10 juicy oranges, peeled and diced', '1...</td>\n",
        "      <td>\"['orange', 'coconut', 'pecan', 'cherry', 'sug...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>98</th>\n",
        "      <td>98</td>\n",
+       "      <td>Crazy Peanut Butter Cookies</td>\n",
        "      <td>['1 c. creamy peanut butter', '1 c. sugar', '1...</td>\n",
        "      <td>\"['peanut butter', 'sugar', 'egg']\"</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>99</th>\n",
        "      <td>99</td>\n",
+       "      <td>Brickle Bars</td>\n",
        "      <td>['1 box yellow cake mix', '2 eggs', '1/3 c. so...</td>\n",
        "      <td>\"['yellow cake mix', 'egg', 'soft margarine', ...</td>\n",
        "    </tr>\n",
@@ -393,8 +419,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-17T03:52:59.862961Z",
-     "start_time": "2025-11-17T03:52:59.858509Z"
+     "end_time": "2025-11-17T04:35:08.694067Z",
+     "start_time": "2025-11-17T04:35:08.690379Z"
     }
    },
    "cell_type": "code",
@@ -404,12 +430,19 @@
     {
      "data": {
       "text/plain": [
-       "   id                                        ingredients  \\\n",
-       "0   0  ['1 c. firmly packed brown sugar', '1/2 c. eva...   \n",
-       "1   1  ['1 small jar chipped beef, cut up', '4 boned ...   \n",
-       "2   2  ['2 (16 oz.) pkg. frozen corn', '1 (8 oz.) pkg...   \n",
-       "3   3  ['1 large whole chicken', '2 (10 1/2 oz.) cans...   \n",
-       "4   4  ['1 c. peanut butter', '3/4 c. graham cracker ...   \n",
+       "   id                  title  \\\n",
+       "0   0    No-Bake Nut Cookies   \n",
+       "1   1  Jewell Ball'S Chicken   \n",
+       "2   2            Creamy Corn   \n",
+       "3   3          Chicken Funny   \n",
+       "4   4     Reeses Cups(Candy)   \n",
+       "\n",
+       "                                         ingredients  \\\n",
+       "0  ['1 c. firmly packed brown sugar', '1/2 c. eva...   \n",
+       "1  ['1 small jar chipped beef, cut up', '4 boned ...   \n",
+       "2  ['2 (16 oz.) pkg. frozen corn', '1 (8 oz.) pkg...   \n",
+       "3  ['1 large whole chicken', '2 (10 1/2 oz.) cans...   \n",
+       "4  ['1 c. peanut butter', '3/4 c. graham cracker ...   \n",
        "\n",
        "                              ingredients_normalized  \n",
        "0  ['brown sugar', 'evaporated milk', 'vanilla', ...  \n",
@@ -438,6 +471,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>id</th>\n",
+       "      <th>title</th>\n",
        "      <th>ingredients</th>\n",
        "      <th>ingredients_normalized</th>\n",
        "    </tr>\n",
@@ -446,30 +480,35 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0</td>\n",
+       "      <td>No-Bake Nut Cookies</td>\n",
        "      <td>['1 c. firmly packed brown sugar', '1/2 c. eva...</td>\n",
        "      <td>['brown sugar', 'evaporated milk', 'vanilla', ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1</td>\n",
+       "      <td>Jewell Ball'S Chicken</td>\n",
        "      <td>['1 small jar chipped beef, cut up', '4 boned ...</td>\n",
        "      <td>['chipped beef', 'chicken breast', 'cream of m...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2</td>\n",
+       "      <td>Creamy Corn</td>\n",
        "      <td>['2 (16 oz.) pkg. frozen corn', '1 (8 oz.) pkg...</td>\n",
        "      <td>['corn', 'cream cheese', 'butter', 'garlic pow...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>3</td>\n",
+       "      <td>Chicken Funny</td>\n",
        "      <td>['1 large whole chicken', '2 (10 1/2 oz.) cans...</td>\n",
        "      <td>['chicken', 'chicken gravy', 'mushroom soup', ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>4</td>\n",
+       "      <td>Reeses Cups(Candy)</td>\n",
        "      <td>['1 c. peanut butter', '3/4 c. graham cracker ...</td>\n",
        "      <td>['peanut butter', 'graham cracker crumbs', 'bu...</td>\n",
        "    </tr>\n",
@@ -486,12 +525,17 @@
    "execution_count": 12
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-17T04:35:08.769128Z",
+     "start_time": "2025-11-17T04:35:08.767903Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": "",
-   "id": "e106a221472e4399"
+   "id": "e106a221472e4399",
+   "outputs": [],
+   "execution_count": null
   }
  ],
  "metadata": {
