--- a/retrieve_food_kg.ipynb
+++ b/retrieve_food_kg.ipynb
@@ -27,8 +27,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-11-06T16:39:22.794970Z",
-     "start_time": "2025-11-06T16:39:21.707212Z"
+     "end_time": "2025-11-17T04:25:08.287912Z",
+     "start_time": "2025-11-17T04:25:07.962308Z"
     }
    },
    "cell_type": "code",
@@ -49,12 +49,12 @@
        "True"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 2
+   "execution_count": 1
   },
   {
    "metadata": {
@@ -288,8 +288,21 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-06T16:59:01.342581Z",
-     "start_time": "2025-11-06T16:59:01.184242Z"
+     "end_time": "2025-11-17T04:25:59.649325Z",
+     "start_time": "2025-11-17T04:25:47.192193Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "df = pd.read_csv(\"data/nourish_public_FoodKG.csv\")",
+   "id": "574afe2e02c07e5d",
+   "outputs": [],
+   "execution_count": 2
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-17T04:26:04.660045Z",
+     "start_time": "2025-11-17T04:26:04.464138Z"
     }
    },
    "cell_type": "code",
@@ -302,12 +315,19 @@
     {
      "data": {
       "text/plain": [
-       "     id                                        ingredients\n",
-       "443   0  [1 c. firmly packed brown sugar, 1/2 c. evapor...\n",
-       "444   1  [1 small jar chipped beef, cut up, 4 boned chi...\n",
-       "445   2  [2 (16 oz.) pkg. frozen corn, 1 (8 oz.) pkg. c...\n",
-       "446   3  [1 large whole chicken, 2 (10 1/2 oz.) cans ch...\n",
-       "447   4  [1 c. peanut butter, 3/4 c. graham cracker cru..."
+       "     id                  title  \\\n",
+       "443   0    No-Bake Nut Cookies   \n",
+       "444   1  Jewell Ball'S Chicken   \n",
+       "445   2            Creamy Corn   \n",
+       "446   3          Chicken Funny   \n",
+       "447   4     Reeses Cups(Candy)   \n",
+       "\n",
+       "                                           ingredients  \n",
+       "443  ['1 c. firmly packed brown sugar', '1/2 c. eva...  \n",
+       "444  ['1 small jar chipped beef, cut up', '4 boned ...  \n",
+       "445  ['2 (16 oz.) pkg. frozen corn', '1 (8 oz.) pkg...  \n",
+       "446  ['1 large whole chicken', '2 (10 1/2 oz.) cans...  \n",
+       "447  ['1 c. peanut butter', '3/4 c. graham cracker ...  "
       ],
       "text/html": [
        "<div>\n",
@@ -329,6 +349,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>id</th>\n",
+       "      <th>title</th>\n",
        "      <th>ingredients</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -336,52 +357,57 @@
        "    <tr>\n",
        "      <th>443</th>\n",
        "      <td>0</td>\n",
-       "      <td>[1 c. firmly packed brown sugar, 1/2 c. evapor...</td>\n",
+       "      <td>No-Bake Nut Cookies</td>\n",
+       "      <td>['1 c. firmly packed brown sugar', '1/2 c. eva...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>444</th>\n",
        "      <td>1</td>\n",
-       "      <td>[1 small jar chipped beef, cut up, 4 boned chi...</td>\n",
+       "      <td>Jewell Ball'S Chicken</td>\n",
+       "      <td>['1 small jar chipped beef, cut up', '4 boned ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>445</th>\n",
        "      <td>2</td>\n",
-       "      <td>[2 (16 oz.) pkg. frozen corn, 1 (8 oz.) pkg. c...</td>\n",
+       "      <td>Creamy Corn</td>\n",
+       "      <td>['2 (16 oz.) pkg. frozen corn', '1 (8 oz.) pkg...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>446</th>\n",
        "      <td>3</td>\n",
-       "      <td>[1 large whole chicken, 2 (10 1/2 oz.) cans ch...</td>\n",
+       "      <td>Chicken Funny</td>\n",
+       "      <td>['1 large whole chicken', '2 (10 1/2 oz.) cans...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>447</th>\n",
        "      <td>4</td>\n",
-       "      <td>[1 c. peanut butter, 3/4 c. graham cracker cru...</td>\n",
+       "      <td>Reeses Cups(Candy)</td>\n",
+       "      <td>['1 c. peanut butter', '3/4 c. graham cracker ...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 16
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-06T16:59:37.041567Z",
-     "start_time": "2025-11-06T16:59:29.066104Z"
+     "end_time": "2025-11-17T04:26:17.654578Z",
+     "start_time": "2025-11-17T04:26:14.049139Z"
     }
    },
    "cell_type": "code",
    "source": "filtered_df.to_csv(\"data/FoodKG_ingredients.csv\", index=False)  # save only id and ingredients",
    "id": "ef7dda2fbc790328",
    "outputs": [],
-   "execution_count": 17
+   "execution_count": 4
   },
   {
    "metadata": {
