--- a/test_food_kg.ipynb
+++ b/test_food_kg.ipynb
@@ -50,7 +50,7 @@
     "# Read the CSV\n",
     "output_df = pd.read_csv(\"sample/FoodKG_ingredients_normalized.csv\")\n",
     "test_df = pd.read_csv(\"TEST/TEST_FoodKG_ingredients_normalized.csv\")\n",
-    "# Rename test column so we don't clash on merge\n",
+    "# Rename the test column so we don't clash on merge\n",
     "test_df_renamed = test_df.rename(columns={\"ingredients_normalized\": \"ingredients_test\"})\n",
     "# Merge using test_df as the left df to keep its order\n",
     "merged_df = test_df_renamed[[\"id\", \"ingredients_test\"]].merge(\n",
@@ -166,17 +166,20 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-21T18:08:00.476637Z",
-     "start_time": "2025-11-21T18:08:00.407770Z"
+     "end_time": "2025-11-21T18:15:04.548071Z",
+     "start_time": "2025-11-21T18:15:04.521650Z"
     }
    },
    "cell_type": "code",
    "source": [
+    "output_sets = [to_set(x) for x in merged_df[\"ingredients_normalized\"]]\n",
+    "test_sets = [to_set(x) for x in merged_df[\"ingredients_test\"]]\n",
+    "\n",
     "new_df = pd.DataFrame({\n",
     "    \"id\": merged_df[\"id\"],\n",
     "    \"ingredients\": merged_df[\"ingredients\"],\n",
-    "    \"output_set\": merged_df[\"ingredients_normalized\"].apply(to_set),\n",
-    "    \"test_set\": merged_df[\"ingredients_test\"].apply(to_set)\n",
+    "    \"output_set\": output_sets,\n",
+    "    \"test_set\": test_sets,\n",
     "})\n",
     "new_df.head()"
    ],
@@ -272,12 +275,12 @@
        "</div>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 12
+   "execution_count": 17
   },
   {
    "metadata": {
