--- a/NEO4J_interface.ipynb
+++ b/NEO4J_interface.ipynb
@@ -408,7 +408,7 @@
     "import ast\n",
     "import os\n",
     "\n",
-    "csv_path = os.path.join(os.getcwd(), 'sample', 'FoodKG_ingredients_normalized.csv')\n",
+    "csv_path = os.path.join(os.getcwd(), 'data/sample', 'FoodKG_ingredients_normalized.csv')\n",
     "\n",
     "df = pd.read_csv(csv_path)\n",
     "print(df.head(5))\n",
