--- a/process_food_branded_experimental.ipynb
+++ b/process_food_branded_experimental.ipynb
@@ -116,7 +116,7 @@
     }
    },
    "cell_type": "code",
-   "source": "df = pd.read_csv(\"data/usda_2022_food_branded_experimental_DESCRIPTION_ONLY.csv\")",
+   "source": "df = pd.read_csv(\"data/raw/usda_2022_food_branded_experimental_DESCRIPTION_ONLY.csv\")",
    "id": "e9a0b822a43439df",
    "outputs": [],
    "execution_count": 5
@@ -334,7 +334,7 @@
     "    \"mapped_ingredient\": final_df[\"mapped_ingredient\"].apply(json.dumps),\n",
     "}).sort_values(\"fdc_id\")\n",
     "# Create directory if it doesn't exist and save\n",
-    "os.makedirs(\"sample\", exist_ok=True)\n",
+    "os.makedirs(\"data/sample\", exist_ok=True)\n",
     "product_table.to_csv(\"sample/food_branded_experimental_normalized.csv\", index=False)"
    ],
    "id": "f05817a977a60f2e",
