--- a/process_food_kg.ipynb
+++ b/process_food_kg.ipynb
@@ -116,7 +116,7 @@
     }
    },
    "cell_type": "code",
-   "source": "df = pd.read_csv(\"data/FoodKG_ingredients.csv\")",
+   "source": "df = pd.read_csv(\"data/raw/FoodKG_ingredients.csv\")",
    "id": "e9a0b822a43439df",
    "outputs": [],
    "execution_count": 5
@@ -301,7 +301,7 @@
     "    \"ingredients_normalized\": final_df[\"ingredients_normalized\"].apply(json.dumps),\n",
     "}).sort_values(\"id\")\n",
     "# Create directory if it doesn't exist and save\n",
-    "os.makedirs(\"sample\", exist_ok=True)\n",
+    "os.makedirs(\"data/sample\", exist_ok=True)\n",
     "ingredients_table.to_csv(\"sample/FoodKG_ingredients_normalized.csv\", index=False)"
    ],
    "id": "f05817a977a60f2e",
