--- a/process_food_branded_experimental.ipynb
+++ b/process_food_branded_experimental.ipynb
@@ -319,13 +319,10 @@
    "execution_count": 9
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-11-07T05:26:45.478547Z",
-     "start_time": "2025-11-07T05:26:45.462701Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
    "source": [
     "# CSV can’t store native Python lists (they are objects), so use JSON dump\n",
     "product_table = pd.DataFrame({\n",
@@ -334,100 +331,18 @@
     "    \"mapped_ingredient\": final_df[\"mapped_ingredient\"].apply(json.dumps),\n",
     "}).sort_values(\"fdc_id\")\n",
     "# Create directory if it doesn't exist and save\n",
-    "os.makedirs(\"data/sample\", exist_ok=True)\n",
-    "product_table.to_csv(\"sample/food_branded_experimental_normalized.csv\", index=False)"
+    "os.makedirs(\"data/output\", exist_ok=True)\n",
+    "product_table.to_csv(\"data/output/processed_products.csv\", index=False)"
    ],
-   "id": "f05817a977a60f2e",
-   "outputs": [],
-   "execution_count": 10
+   "id": "9d1d7f53f01db112"
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-11-07T05:26:46.067613Z",
-     "start_time": "2025-11-07T05:26:46.063371Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
    "source": "product_table.head()",
-   "id": "2661eff38d624e1e",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "   fdc_id                                        description mapped_ingredient\n",
-       "0  167512  Pillsbury Golden Layer Buttermilk Biscuits, Ar...        \"biscuits\"\n",
-       "1  167513  Pillsbury, Cinnamon Rolls with Icing, refriger...  \"cinnamon rolls\"\n",
-       "2  167514  Kraft Foods, Shake N Bake Original Recipe, Coa...    \"bread crumbs\"\n",
-       "3  167515     George Weston Bakeries, Thomas English Muffins  \"english muffin\"\n",
-       "4  167516         Waffles, buttermilk, frozen, ready-to-heat         \"waffles\""
-      ],
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>fdc_id</th>\n",
-       "      <th>description</th>\n",
-       "      <th>mapped_ingredient</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>167512</td>\n",
-       "      <td>Pillsbury Golden Layer Buttermilk Biscuits, Ar...</td>\n",
-       "      <td>\"biscuits\"</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>167513</td>\n",
-       "      <td>Pillsbury, Cinnamon Rolls with Icing, refriger...</td>\n",
-       "      <td>\"cinnamon rolls\"</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>167514</td>\n",
-       "      <td>Kraft Foods, Shake N Bake Original Recipe, Coa...</td>\n",
-       "      <td>\"bread crumbs\"</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>167515</td>\n",
-       "      <td>George Weston Bakeries, Thomas English Muffins</td>\n",
-       "      <td>\"english muffin\"</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>167516</td>\n",
-       "      <td>Waffles, buttermilk, frozen, ready-to-heat</td>\n",
-       "      <td>\"waffles\"</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 11
+   "id": "ca4e32fa84f197ea"
   },
   {
    "metadata": {
