--- a/process_food_kg.ipynb
+++ b/process_food_kg.ipynb
@@ -26,15 +26,10 @@
    "execution_count": 1
   },
   {
+   "metadata": {},
    "cell_type": "code",
-   "id": "initial_id",
-   "metadata": {
-    "collapsed": true,
-    "ExecuteTime": {
-     "end_time": "2025-11-17T04:34:43.914802Z",
-     "start_time": "2025-11-17T04:34:43.229064Z"
-    }
-   },
+   "outputs": [],
+   "execution_count": null,
    "source": [
     "import json\n",
     "import os\n",
@@ -56,17 +51,13 @@
     "    api_key=api_key\n",
     ")"
    ],
-   "outputs": [],
-   "execution_count": 2
+   "id": "3bc70ff06c835cc0"
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-11-17T04:34:43.920212Z",
-     "start_time": "2025-11-17T04:34:43.918544Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
    "source": [
     "# # Credentials\n",
     "# host = os.getenv(\"POSTGRES_HOST\")\n",
@@ -83,9 +74,7 @@
     "# except Exception as e:\n",
     "#     print(\"❌ Connection failed:\", e)"
    ],
-   "id": "9e27b1819da1fd42",
-   "outputs": [],
-   "execution_count": 3
+   "id": "d5a26bccf47018b7"
   },
   {
    "metadata": {
@@ -285,13 +274,10 @@
    "execution_count": 9
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-11-17T04:35:08.655227Z",
-     "start_time": "2025-11-17T04:35:08.651272Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
    "source": [
     "# CSV can’t store native Python lists (they are objects), so use JSON dump\n",
     "ingredients_table = pd.DataFrame({\n",
@@ -300,121 +286,19 @@
     "    \"ingredients\": final_df[\"ingredients\"],  # new, kept upon request\n",
     "    \"ingredients_normalized\": final_df[\"ingredients_normalized\"].apply(json.dumps),\n",
     "}).sort_values(\"id\")\n",
-    "# Create directory if it doesn't exist and save\n",
-    "os.makedirs(\"data/sample\", exist_ok=True)\n",
-    "ingredients_table.to_csv(\"sample/FoodKG_ingredients_normalized.csv\", index=False)"
+    "# Create a directory if it doesn't exist and save\n",
+    "os.makedirs(\"data/output\", exist_ok=True)\n",
+    "ingredients_table.to_csv(\"data/output/processed_ingredients.csv\", index=False)"
    ],
-   "id": "f05817a977a60f2e",
-   "outputs": [],
-   "execution_count": 10
+   "id": "32402a8e1820fcca"
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-11-17T04:35:08.667542Z",
-     "start_time": "2025-11-17T04:35:08.664090Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
    "source": "ingredients_table.tail()",
-   "id": "2661eff38d624e1e",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "    id                        title  \\\n",
-       "95  95                  Baked Beans   \n",
-       "96  96         Sweet-N-Sour Chicken   \n",
-       "97  97                     Ambrosia   \n",
-       "98  98  Crazy Peanut Butter Cookies   \n",
-       "99  99                 Brickle Bars   \n",
-       "\n",
-       "                                          ingredients  \\\n",
-       "95  ['3 (1 lb.) cans pork and beans', '1/2 c. bell...   \n",
-       "96  ['2 c. diced cooked chicken', '2 Tbsp. shorten...   \n",
-       "97  ['8 to 10 juicy oranges, peeled and diced', '1...   \n",
-       "98  ['1 c. creamy peanut butter', '1 c. sugar', '1...   \n",
-       "99  ['1 box yellow cake mix', '2 eggs', '1/3 c. so...   \n",
-       "\n",
-       "                               ingredients_normalized  \n",
-       "95  \"['pork and beans', 'bell pepper', 'onion', 'c...  \n",
-       "96  \"['chicken', 'shortening', 'onion', 'carrot', ...  \n",
-       "97  \"['orange', 'coconut', 'pecan', 'cherry', 'sug...  \n",
-       "98                \"['peanut butter', 'sugar', 'egg']\"  \n",
-       "99  \"['yellow cake mix', 'egg', 'soft margarine', ...  "
-      ],
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>title</th>\n",
-       "      <th>ingredients</th>\n",
-       "      <th>ingredients_normalized</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>95</th>\n",
-       "      <td>95</td>\n",
-       "      <td>Baked Beans</td>\n",
-       "      <td>['3 (1 lb.) cans pork and beans', '1/2 c. bell...</td>\n",
-       "      <td>\"['pork and beans', 'bell pepper', 'onion', 'c...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>96</th>\n",
-       "      <td>96</td>\n",
-       "      <td>Sweet-N-Sour Chicken</td>\n",
-       "      <td>['2 c. diced cooked chicken', '2 Tbsp. shorten...</td>\n",
-       "      <td>\"['chicken', 'shortening', 'onion', 'carrot', ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>97</th>\n",
-       "      <td>97</td>\n",
-       "      <td>Ambrosia</td>\n",
-       "      <td>['8 to 10 juicy oranges, peeled and diced', '1...</td>\n",
-       "      <td>\"['orange', 'coconut', 'pecan', 'cherry', 'sug...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>98</th>\n",
-       "      <td>98</td>\n",
-       "      <td>Crazy Peanut Butter Cookies</td>\n",
-       "      <td>['1 c. creamy peanut butter', '1 c. sugar', '1...</td>\n",
-       "      <td>\"['peanut butter', 'sugar', 'egg']\"</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>99</th>\n",
-       "      <td>99</td>\n",
-       "      <td>Brickle Bars</td>\n",
-       "      <td>['1 box yellow cake mix', '2 eggs', '1/3 c. so...</td>\n",
-       "      <td>\"['yellow cake mix', 'egg', 'soft margarine', ...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 11
+   "id": "b0b88249f1e568ff"
   },
   {
    "metadata": {
