--- a/NEO4J_interface.ipynb
+++ b/NEO4J_interface.ipynb
@@ -17,6 +17,7 @@
    ],
    "source": [
     "import sys\n",
+    "\n",
     "print(sys.executable)\n",
     "!{sys.executable} -m pip install neo4j"
    ]
@@ -36,13 +37,13 @@
     "\n",
     "\n",
     "class GraphDB:\n",
-    "    \n",
+    "\n",
     "    driver = None\n",
     "    enable_logging = True\n",
-    "    \n",
+    "\n",
     "    def __init__(self):\n",
     "        self.get_driver()\n",
-    "        \n",
+    "\n",
     "    def get_driver(self):\n",
     "        if self.driver:\n",
     "            return self.driver()\n",
@@ -53,9 +54,9 @@
     "            except Exception as e:\n",
     "                print(f\"Failed to initialize driver due to {e}\")\n",
     "                return None\n",
-    "                \n",
-    "                \n",
-    "                \n",
+    "\n",
+    "\n",
+    "\n",
     "    def init_driver(self):\n",
     "        self.driver = GraphDatabase.driver(URI, auth=(USER, PASSWORD))\n",
     "        return\n",
@@ -78,28 +79,28 @@
     "            if single:\n",
     "                return records[0] if records else None\n",
     "            return records\n",
-    "        \n",
+    "\n",
     "\n",
     "    def create_node(self, label, properties):\n",
     "        if self.node_exists(label, properties):\n",
     "            if self.enable_logging:\n",
     "                print(\"Node already exists\")\n",
     "            return self.get_node(label, properties)\n",
-    "        \n",
+    "\n",
     "        query = f\"CREATE (n:{label} $props) RETURN n\"\n",
     "        return self.run_query(query, {\"props\": properties}, single=True)\n",
     "\n",
     "    def get_nodes_matching_label(self, label):\n",
     "        query = f\"MATCH (n:{label}) RETURN n\"\n",
     "        return self.run_query(query)\n",
-    "    \n",
+    "\n",
     "    def get_node(self, label, properties):\n",
     "        prop_keys = list(properties.keys())\n",
     "        prop_str = \", \".join([f\"{key}: ${key}\" for key in prop_keys])\n",
     "\n",
     "        query = f\"MATCH (n:{label} {{{prop_str}}}) RETURN n LIMIT 1\"\n",
     "        return self.run_query(query, properties, single=True)\n",
-    "    \n",
+    "\n",
     "    def node_exists(self, label, properties):\n",
     "        prop_keys = list(properties.keys())\n",
     "        prop_str = \", \".join([f\"{key}: ${key}\" for key in prop_keys])\n",
@@ -107,7 +108,7 @@
     "        query = f\"MATCH (n:{label} {{{prop_str}}}) RETURN n LIMIT 1\"\n",
     "        result = self.run_query(query, properties, single=True)\n",
     "        return result is not None\n",
-    "    \n",
+    "\n",
     "    def relationship_exists(self, label1, prop1, rel_type, label2, prop2):\n",
     "        prop1_str = \", \".join([f\"{key}: $prop1.{key}\" for key in prop1.keys()])\n",
     "        prop2_str = \", \".join([f\"{key}: $prop2.{key}\" for key in prop2.keys()])\n",
@@ -118,7 +119,7 @@
     "        \"\"\"\n",
     "        result = self.run_query(query, {\"prop1\": prop1, \"prop2\": prop2}, single=True)\n",
     "        return result is not None\n",
-    "    \n",
+    "\n",
     "    def get_relationship(self, label1, prop1, rel_type, label2, prop2):\n",
     "        prop1_str = \", \".join([f\"{key}: $prop1.{key}\" for key in prop1.keys()])\n",
     "        prop2_str = \", \".join([f\"{key}: $prop2.{key}\" for key in prop2.keys()])\n",
@@ -128,14 +129,14 @@
     "        RETURN type(r) AS relationship, properties(r) AS edge_properties LIMIT 1\n",
     "        \"\"\"\n",
     "        return self.run_query(query, {\"prop1\": prop1, \"prop2\": prop2}, single=True)\n",
-    "    \n",
+    "\n",
     "    def create_ingredient_nodes(self, ingredient_list):\n",
     "        query = \"\"\"\n",
     "        UNWIND $ingredients AS name\n",
     "        MERGE (i:Ingredient {name: name})\n",
     "        \"\"\"\n",
     "        return self.run_query(query, {\"ingredients\": ingredient_list})\n",
-    "    \n",
+    "\n",
     "    def create_recipe_nodes(self, recipe_list):\n",
     "        \"\"\"\n",
     "        recipe_list = \n",
@@ -147,15 +148,15 @@
     "            ]\n",
     "        \n",
     "        \"\"\"\n",
-    "        \n",
-    "        \n",
+    "\n",
+    "\n",
     "        query = \"\"\"\n",
     "            UNWIND $recipes AS r\n",
     "            MERGE (rec:Recipe {id: r.id})\n",
     "            SET rec.title = r.title\n",
     "            \"\"\"\n",
     "        return self.run_query(query, {\"recipes\": recipe_list})\n",
-    "    \n",
+    "\n",
     "    def create_hasIngredient_edges(self, edge_list, batch_size=5000):\n",
     "        total = len(edge_list)\n",
     "        for i in range(0, total, batch_size):\n",
@@ -174,7 +175,7 @@
     "                  f\"({len(batch)} relationships) in {elapsed:.2f}s\")\n",
     "        return\n",
     "\n",
-    "    \n",
+    "\n",
     "    def create_relationship(self, label1, prop1, rel_type, label2, prop2, edge_prop=None):\n",
     "        \"\"\"\n",
     "        Create a relationship between two nodes:\n",
@@ -224,8 +225,7 @@
     "        result = self.run_query(query, params, single=True)\n",
     "        if self.enable_logging:\n",
     "            print(f\"Created new relationship '{rel_type}' between {label1} and {label2}.\")\n",
-    "        return result\n",
-    "    "
+    "        return result\n"
    ]
   },
   {
@@ -243,6 +243,7 @@
    ],
    "source": [
     "import pandas as pd\n",
+    "\n",
     "print(pd.__file__)"
    ]
   },
@@ -331,7 +332,8 @@
     }
    ],
    "source": [
-    "edge = my_graph.create_relationship(\"Recipe\", {\"name\": \"Shepards Pie2\", \"Recipe_id\": 3}, \"has_ingredient\", \"Ingredient\", {\"name\": \"peas\"})"
+    "edge = my_graph.create_relationship(\"Recipe\", {\"name\": \"Shepards Pie2\", \"Recipe_id\": 3}, \"has_ingredient\", \"Ingredient\",\n",
+    "                                    {\"name\": \"peas\"})"
    ]
   },
   {
@@ -348,7 +350,8 @@
     }
    ],
    "source": [
-    "edge = my_graph.create_relationship(\"Recipe\", {\"name\": \"Shepards Pie2\", \"Recipe_id\": 3}, \"has_ingredient\", \"Ingredient\", {\"name\": \"peas\"})"
+    "edge = my_graph.create_relationship(\"Recipe\", {\"name\": \"Shepards Pie2\", \"Recipe_id\": 3}, \"has_ingredient\", \"Ingredient\",\n",
+    "                                    {\"name\": \"peas\"})"
    ]
   },
   {
@@ -366,7 +369,8 @@
     }
    ],
    "source": [
-    "edge = my_graph.create_relationship(\"Recipe\", {\"name\": \"Shepards Pie2\", \"Recipe_id\": 3}, \"has_ingredient\", \"Ingredient\", {\"name\": \"carrots\"})"
+    "edge = my_graph.create_relationship(\"Recipe\", {\"name\": \"Shepards Pie2\", \"Recipe_id\": 3}, \"has_ingredient\", \"Ingredient\",\n",
+    "                                    {\"name\": \"carrots\"})"
    ]
   },
   {
@@ -550,7 +554,7 @@
     }
    ],
    "source": [
-    "df_exploded['RecipeId'] = df_exploded['id'].apply(lambda x: str(x)+'title')\n",
+    "df_exploded['RecipeId'] = df_exploded['id'].apply(lambda x: str(x) + 'title')\n",
     "#df_exploded[['RecipeId', 'id']]\n",
     "\n",
     "unique_recipes = (\n",
@@ -820,9 +824,8 @@
     "def Create_Nodes_Edges_Recipes_to_Ingredients(graph_intf, RecipeID, IngredientTitle):\n",
     "    #TEMP RECIPE TITLE DUMMY NAME FOR NOW:\n",
     "    RecipeTitle = f\"Title_{RecipeID}\"\n",
-    "    \n",
-    "    edge = graph_intf.create_relationship(\"Recipe\", {\"Title\": RecipeTitle, \"Recipe_id\": RecipeID}, \"has_ingredient\", \"Ingredient\", {\"name\": IngredientTitle})\n",
-    "    "
+    "\n",
+    "    edge = graph_intf.create_relationship(\"Recipe\", {\"Title\": RecipeTitle, \"Recipe_id\": RecipeID}, \"has_ingredient\", \"Ingredient\", {\"name\": IngredientTitle})\n"
    ]
   },
   {
