--- a/NEO4J_interface.ipynb
+++ b/NEO4J_interface.ipynb
@@ -37,7 +37,6 @@
     "\n",
     "\n",
     "class GraphDB:\n",
-    "\n",
     "    driver = None\n",
     "    enable_logging = True\n",
     "\n",
@@ -54,8 +53,6 @@
     "            except Exception as e:\n",
     "                print(f\"Failed to initialize driver due to {e}\")\n",
     "                return None\n",
-    "\n",
-    "\n",
     "\n",
     "    def init_driver(self):\n",
     "        self.driver = GraphDatabase.driver(URI, auth=(USER, PASSWORD))\n",
@@ -79,7 +76,6 @@
     "            if single:\n",
     "                return records[0] if records else None\n",
     "            return records\n",
-    "\n",
     "\n",
     "    def create_node(self, label, properties):\n",
     "        if self.node_exists(label, properties):\n",
@@ -149,7 +145,6 @@
     "        \n",
     "        \"\"\"\n",
     "\n",
-    "\n",
     "        query = \"\"\"\n",
     "            UNWIND $recipes AS r\n",
     "            MERGE (rec:Recipe {id: r.id})\n",
@@ -160,7 +155,7 @@
     "    def create_hasIngredient_edges(self, edge_list, batch_size=5000):\n",
     "        total = len(edge_list)\n",
     "        for i in range(0, total, batch_size):\n",
-    "            batch = edge_list[i : i + batch_size]\n",
+    "            batch = edge_list[i: i + batch_size]\n",
     "            query = \"\"\"\n",
     "            UNWIND $edges AS e\n",
     "            MATCH (r:Recipe {id: e.id})\n",
@@ -170,11 +165,10 @@
     "            start = time.perf_counter()\n",
     "            self.run_query(query, {\"edges\": batch})\n",
     "            elapsed = time.perf_counter() - start\n",
-    "            if(self.enable_logging):\n",
-    "                print(f\"Inserted batch {i//batch_size+1} \"\n",
-    "                  f\"({len(batch)} relationships) in {elapsed:.2f}s\")\n",
+    "            if (self.enable_logging):\n",
+    "                print(f\"Inserted batch {i // batch_size + 1} \"\n",
+    "                      f\"({len(batch)} relationships) in {elapsed:.2f}s\")\n",
     "        return\n",
-    "\n",
     "\n",
     "    def create_relationship(self, label1, prop1, rel_type, label2, prop2, edge_prop=None):\n",
     "        \"\"\"\n",
@@ -825,7 +819,8 @@
     "    #TEMP RECIPE TITLE DUMMY NAME FOR NOW:\n",
     "    RecipeTitle = f\"Title_{RecipeID}\"\n",
     "\n",
-    "    edge = graph_intf.create_relationship(\"Recipe\", {\"Title\": RecipeTitle, \"Recipe_id\": RecipeID}, \"has_ingredient\", \"Ingredient\", {\"name\": IngredientTitle})\n"
+    "    edge = graph_intf.create_relationship(\"Recipe\", {\"Title\": RecipeTitle, \"Recipe_id\": RecipeID}, \"has_ingredient\",\n",
+    "                                          \"Ingredient\", {\"name\": IngredientTitle})\n"
    ]
   },
   {
