--- a/process_food_kg.ipynb
+++ b/process_food_kg.ipynb
@@ -37,7 +37,7 @@
     "import pandas as pd\n",
     "from dotenv import load_dotenv\n",
     "\n",
-    "from util import process_food_kg_df, assemble_food_kg_df\n",
+    "from llm_util import process_food_kg_df, assemble_food_kg_df\n",
     "\n",
     "# from sqlalchemy import create_engine\n",
     "\n",
