--- a/process_food_branded_experimental.ipynb
+++ b/process_food_branded_experimental.ipynb
@@ -42,7 +42,7 @@
     "import pandas as pd\n",
     "from dotenv import load_dotenv\n",
     "\n",
-    "from util import process_branded_food_experimental_df, assemble_branded_food_experimental_df\n",
+    "from llm_util import process_branded_food_experimental_df, assemble_branded_food_experimental_df\n",
     "\n",
     "# from sqlalchemy import create_engine\n",
     "\n",
